# JosephlovesJohn_website

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  content.txt  main.py  manage.py  pyproject.toml  render.yaml
.github/workflows/: perf-report.yml  pre-commit.yml  real-stripe-browser.yml
docs/: README.md  deployment.md  performance_reports.md  repository-architecture.md  shop-flow.md
docs/architecture/: repository-architecture.md
docs/deployment/: cloudflare_r2.md  deployment.md  versioning.md
docs/launch/: live_launch_checklist.html  live_launch_checklist.md  prelaunch_checklist.md
docs/local-notes/: main_page_account_purchase_notes.local.md  plausible_setup.local.md  seo_admin_notes.local.md
docs/performance/: performance_reports.md
docs/reading-plans/: cleanup_plan.html  mastering_page_reading_plan.html  repo_reading_plan.html
docs/seo/: search_console_checklist.md
docs/shop/: shop-flow.md
html5up-solid-state/: README.txt  elements.html  generic.html  index.html
html5up-solid-state/assets/sass/: main.scss  noscript.scss
josephlovesjohn_site/: __init__.py  asgi.py  assets.py  context_processors.py  csp.py  rate_limits.py  recaptcha.py  sentry.py  settings.py  site_urls.py  storage.py  urls.py  wsgi.py
main_site/: __init__.py  admin.py  apps.py  cache.py  contact_flow.py  content.py  context.py  context_processors.py  forms.py  models.py  seo.py  signals.py  site_data.py  sitemaps.py  urls.py  views.py
main_site/migrations/: 0001_initial.py  0002_normalize_gig_photo_titles.py  0003_albumart_animationasset_alter_gigphoto_options_and_more.py  0004_headersociallink_primarynavitem.py  0005_spotify_social_link.py  0006_promote_bristol_folk_house_photo_10.py  __init__.py
main_site/templatetags/: asset_urls.py
mastering/: __init__.py  apps.py  forms.py  urls.py  views.py
scripts/: compare_branch_browser_perf.py  compare_branch_concurrency.sh  compare_branch_perf.sh  compare_branch_profiles.sh  compare_branch_queries.sh  generate_perf_report.py  manual_compare_branch_concurrency.py
shop/: __init__.py  admin.py  apps.py  cart.py  context_processors.py  downloads.py  emails.py  forms.py  models.py  ownership.py  signals.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_seed_music_products.py  0003_update_music_product_prices.py  0004_order_paid_at_order_stripe_checkout_session_id_and_more.py  0005_order_confirmation_email_sent_at.py  0006_product_orderitem_download_file_wav_path.py  0007_remove_customerprofile_full_name.py  0008_remove_orderitem_download_file_wav_path_and_more.py  __init__.py
static/assets/css/: bottom-nav.css  footer.css  main-middle.css  main.css  top-nav.css
static/assets/js/: main.js  playerjs-3.js  playerjs_v2.js  playerjs_v3.js  playerjs_v4.js
static/assets/sass/: main.scss  noscript.scss
static/main_site/css/: site.css
static/main_site/js/: analytics.js  cart.js  cookies.js  dom_utils.js  site.js  track_links.js
templates/: base.html  index.html  mastering_services.html
templates/includes/: cookie_banner.html  meta_pixel.html  plausible.html  recaptcha_v3.html
templates/main_site/: base.html  legal_page.html  music_track.html  site.html
templates/mastering/: home.html  intake.html  subfolder.html
templates/shop/: account.html  base.html  checkout.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  success.html
tests/: conftest.py  test_accessibility_semantics.py  test_app_configs.py  test_asset_urls.py  test_browser_quality.py  test_browser_ui.py  test_contact_form.py  test_content_security_policy.py  test_main_site_helpers.py  test_main_site_integration.py  test_main_site_models_admin.py  test_main_site_routes.py  test_main_site_smoke.py  test_manage.py  test_mastering_contact_form.py  test_mastering_intake_form.py  test_mastering_routes.py  test_mastering_smoke.py  test_migrations.py  test_perf_report.py  test_recaptcha.py  test_sentry_config.py  test_seo.py  test_settings_config.py  test_shop_flow.py  test_static_asset_regressions.py
(+76 files in other folders)
